--- a/dictionary/templates/dictionary/dictionary_detail.html
+++ b/dictionary/templates/dictionary/dictionary_detail.html
@@ -1,12 +1,38 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block title %}detail{% endblock %}
 
 {% block content %}
-    {{ dictionary.animal_name }} <p>
-    {{ dictionary.level }}<p>
-    {{ dictionary.age }}<p>
-    {{ dictionary.eat }}<p>
-    {{ dictionary.live }}<p>
-    {{ dictionary.description }}
+
+    <img src="{% static 'image/logo.png' %}" class="photo"> {# 로고 이미지 #}
+    <nav>
+        <a href="{% url 'dictionary:list' %}" id="list1" onmouseover="mover1()" onmouseout="mout1()">VIEWALL</a>     {# 네비게이션 바 #}
+          <a href="{% url 'dictionary:m' %}" id="list2" onmouseover="mover2()" onmouseout="mout2()">MAMMALIA</a>
+          <a href="{% url 'dictionary:a' %}" id="list3" onmouseover="mover3()" onmouseout="mout3()">AMPHIBIA</a>
+          <a href="{% url 'dictionary:p' %}" id="list4" onmouseover="mover4()" onmouseout="mout4()">PISCE</a>
+          <a href="{% url 'dictionary:b' %}" id="list5" onmouseover="mover5()" onmouseout="mout5()">BIRD</a>
+          <a href="{% url 'dictionary:i' %}" id="list6" onmouseover="mover6()" onmouseout="mout6()">INVERTEBRATE</a>
+          <a href="{% url 'dictionary:r' %}" id="list7" onmouseover="mover7()" onmouseout="mout7()">Reptile</a>
+        <div id="indicator"></div>
+    </nav>
+
+    <form action="" method="get"> {# 검색기능 #}
+            <div class="row">
+                <div class="col">
+                    <div class="col">
+                        <input type="text" name="search_animal_name" value="{{ request.GET.search_animal_name }}" class="form-control">
+                    </div>
+                    <button type="submit" class="search btn-dark">Search</button>
+                </div>
+            </div>
+        </form>
+    <div class="contents">
+        {% if dictionary.image != '' %}<img src=" {{ dictionary.image.url }}" class="photo2">{% endif %}<br>
+        {{ dictionary.animal_name }} <p>
+        {{ dictionary.level }}<p>
+        {{ dictionary.age }}<p>
+        {{ dictionary.eat }}<p>
+        {{ dictionary.live }}<p>
+        {{ dictionary.description }}
+    </div>
 {% endblock %}
