--- a/dictionary/templates/dictionary/dictionary_list.html
+++ b/dictionary/templates/dictionary/dictionary_list.html
@@ -16,7 +16,7 @@
           <a href="{% url 'dictionary:r' %}" id="list7" onmouseover="mover7()" onmouseout="mout7()">Reptile</a>
           <div id="indicator"></div>
         </nav>
-
+        <h1> 전체보기 </h1>
     {#    <h2 class="g">All</h2>#}
     {#    {% for dictionary imn dictionary_list %}#}
         <div class="l1">
@@ -43,26 +43,26 @@
             </div>
         </form>
 
-        <div class="pagebar">
-        {% if is_paginated %}
-            <ul class="pagination pagination-sm justify-content-center">
-                {% if page_obj.has_previous %}
-                    <li class="page-item"><a href="{{ request.path }}?page={{ page_obj.previous_page_number }}" class="page-link">Previous</a> </li>
-                {% else %}
-                     <li class="page-item disabled"><a href="" class="page-link">Previous</a> </li>
-                {% endif %}
-                <!-- 127.0.0.1/bookmark/?page=숫자 -->
-                {% for page in page_obj.paginator.page_range %}
-                <li class="page-item{% if page_obj.number == forloop.counter %} disabled{% endif %}">
-                    <a href="{{ request.path }}?page={{ forloop.counter }}" class="page-link">{{ forloop.counter }}</a>
-                </li>
-            {% endfor %}
-            {% if page_obj.has_next %}
-                <li class="page-item"><a href="{{ request.path }}?page={{ page_obj.next_page_number }}" class="page-link">NEXT</a></li>
-            {% else %}
-                <li class="page-item disabled"><a href="{{ request.path }}" class="page-link">NEXT</a></li>
-            {% endif %}
-            </ul>
-            {% endif %}
-        </div>
+{#        <div class="pagebar">#}
+{#        {% if is_paginated %}#}
+{#            <ul class="pagination pagination-sm justify-content-center">#}
+{#                {% if page_obj.has_previous %}#}
+{#                    <li class="page-item"><a href="{{ request.path }}?page={{ page_obj.previous_page_number }}" class="page-link">Previous</a> </li>#}
+{#                {% else %}#}
+{#                     <li class="page-item disabled"><a href="" class="page-link">Previous</a> </li>#}
+{#                {% endif %}#}
+{#                <!-- 127.0.0.1/bookmark/?page=숫자 -->#}
+{#                {% for page in page_obj.paginator.page_range %}#}
+{#                <li class="page-item{% if page_obj.number == forloop.counter %} disabled{% endif %}">#}
+{#                    <a href="{{ request.path }}?page={{ forloop.counter }}" class="page-link">{{ forloop.counter }}</a>#}
+{#                </li>#}
+{#            {% endfor %}#}
+{#            {% if page_obj.has_next %}#}
+{#                <li class="page-item"><a href="{{ request.path }}?page={{ page_obj.next_page_number }}" class="page-link">NEXT</a></li>#}
+{#            {% else %}#}
+{#                <li class="page-item disabled"><a href="{{ request.path }}" class="page-link">NEXT</a></li>#}
+{#            {% endif %}#}
+{#            </ul>#}
+{#            {% endif %}#}
+{#        </div>#}
     {% endblock %}
