--- a/dictionary/templates/dictionary/dictionary_detail.html
+++ b/dictionary/templates/dictionary/dictionary_detail.html
@@ -28,11 +28,11 @@
         </form>
     <div class="contents">
         {% if dictionary.image != '' %}<img src=" {{ dictionary.image.url }}" class="photo2">{% endif %}<br>
-        이름 : <a/>{{ dictionary.animal_name }} <p>
-        과 : {{ dictionary.level }}<p>
-        수명 : {{ dictionary.age }}<p>
-        먹이 : {{ dictionary.eat }}<p>
-        서식지 : {{ dictionary.live }}<p>
-        내용 : {{ dictionary.description }}
+        <b>이름</b> : {{ dictionary.animal_name }} <p>
+        <b>과</b> : {{ dictionary.level }}<p>
+        <b>수명</b> : {{ dictionary.age }}<p>
+        <b>먹이</b> : {{ dictionary.eat }}<p>
+        <b>서식지</b> : {{ dictionary.live }}<p>
+        <b>내용</b> : {{ dictionary.description }}
     </div>
 {% endblock %}
