--- a/static/css/mystyle.css
+++ b/static/css/mystyle.css
@@ -111,7 +111,6 @@ nav a
     font-weight: bold;
     padding: 10px 20px;
     transition: 0.2s ease color;
-
 }
 
 nav a:before, nav a:after
@@ -127,7 +126,7 @@ nav a:before, nav a:after
 
 nav a:before
 {
-    top: 0;
+    top: 5px;
     left: 10px;
     width: 6px;
     height: 6px;
@@ -222,11 +221,19 @@ nav a:nth-child(7):after
     background-color: skyblue;
     border-radius: 5px;
     transition: 0.2s ease left;
+    top: 35px;
 }
 
 nav a:hover
 {
     color: black;
+    font-size: larger;
+    text-decoration: none;
+    display: inline;
+    padding: 0 130px;
+    top: -30px;
+    left: 35px;
+
 }
 
 nav a:hover:before, nav a:hover:after
@@ -234,6 +241,7 @@ nav a:hover:before, nav a:hover:after
     transform: scale(1);
     writing-mode: horizontal-tb;
     margin-bottom: 1em;
+    top: 5px;
 }
 
 nav a:nth-child(1):hover ~ #indicator
@@ -243,37 +251,37 @@ nav a:nth-child(1):hover ~ #indicator
 
 nav a:nth-child(2):hover ~ #indicator
 {
-    left: 22%;
+    left: 20%;
     background: linear-gradient(130deg, #00e2ff, #89ff00);
 }
 
 nav a:nth-child(3):hover ~ #indicator
 {
-    left: 40%;
+    left: 37%;
     background: linear-gradient(130deg, purple, palevioletred);
 }
 
 nav a:nth-child(4):hover ~ #indicator
 {
-    left: 55%;
+    left: 49%;
     background: linear-gradient(130deg, darkblue, dodgerblue);
 }
 
 nav a:nth-child(5):hover ~ #indicator
 {
-    left: 68%;
+    left: 59%;
     background: linear-gradient(130deg, #ffb700, #f2ff00);
 }
 
 nav a:nth-child(6):hover ~ #indicator
 {
-    left: 86%;
+    left: 80%;
     background: linear-gradient(130deg, #ff1f1a, #ff5ffa);
 }
 
 nav a:nth-child(7):hover ~ #indicator
 {
-    left: 86%;
+    left: 91%;
     background: linear-gradient(130deg, #00ff65, #00f6ff);
 }
 
