--- a/dictionary/templates/dictionary/dictionary_list.html
+++ b/dictionary/templates/dictionary/dictionary_list.html
@@ -7,15 +7,15 @@
     {% block content %}
         <img src="{% static 'image/logo.png' %}" class="photo"> {# 로고 이미지 #}
         <nav>
-          <a href="{% url 'dictionary:list' %}" id="list1" onmouseover="mover1()" onmouseout="mout1()">VIEWALL</a>     {# 네비게이션 바 #}
+        <a href="{% url 'dictionary:list' %}" id="list1" onmouseover="mover1()" onmouseout="mout1()">VIEWALL</a>     {# 네비게이션 바 #}
           <a href="{% url 'dictionary:m' %}" id="list2" onmouseover="mover2()" onmouseout="mout2()">MAMMALIA</a>
           <a href="{% url 'dictionary:a' %}" id="list3" onmouseover="mover3()" onmouseout="mout3()">AMPHIBIA</a>
           <a href="{% url 'dictionary:p' %}" id="list4" onmouseover="mover4()" onmouseout="mout4()">PISCE</a>
           <a href="{% url 'dictionary:b' %}" id="list5" onmouseover="mover5()" onmouseout="mout5()">BIRD</a>
           <a href="{% url 'dictionary:i' %}" id="list6" onmouseover="mover6()" onmouseout="mout6()">INVERTEBRATE</a>
           <a href="{% url 'dictionary:r' %}" id="list7" onmouseover="mover7()" onmouseout="mout7()">Reptile</a>
-          <div id="indicator"></div>
-        </nav>
+        <div id="indicator"></div>
+    </nav>
 
     {#    <h2 class="g">All</h2>#}
     {#    {% for dictionary imn dictionary_list %}#}
@@ -43,26 +43,26 @@
             </div>
         </form>
 
-{#        <div class="pagebar">#}
-{#        {% if is_paginated %}#}
-{#            <ul class="pagination pagination-sm justify-content-center">#}
-{#                {% if page_obj.has_previous %}#}
-{#                    <li class="page-item"><a href="{{ request.path }}?page={{ page_obj.previous_page_number }}" class="page-link">Previous</a> </li>#}
-{#                {% else %}#}
-{#                     <li class="page-item disabled"><a href="" class="page-link">Previous</a> </li>#}
-{#                {% endif %}#}
-{#                <!-- 127.0.0.1/bookmark/?page=숫자 -->#}
-{#                {% for page in page_obj.paginator.page_range %}#}
-{#                <li class="page-item{% if page_obj.number == forloop.counter %} disabled{% endif %}">#}
-{#                    <a href="{{ request.path }}?page={{ forloop.counter }}" class="page-link">{{ forloop.counter }}</a>#}
-{#                </li>#}
-{#            {% endfor %}#}
-{#            {% if page_obj.has_next %}#}
-{#                <li class="page-item"><a href="{{ request.path }}?page={{ page_obj.next_page_number }}" class="page-link">NEXT</a></li>#}
-{#            {% else %}#}
-{#                <li class="page-item disabled"><a href="{{ request.path }}" class="page-link">NEXT</a></li>#}
-{#            {% endif %}#}
-{#            </ul>#}
-{#            {% endif %}#}
-{#        </div>#}
+        <div class="pagebar">
+        {% if is_paginated %}
+            <ul class="pagination pagination-sm justify-content-center">
+                {% if page_obj.has_previous %}
+                    <li class="page-item"><a href="{{ request.path }}?page={{ page_obj.previous_page_number }}" class="page-link">Previous</a> </li>
+                {% else %}
+                     <li class="page-item disabled"><a href="" class="page-link">Previous</a> </li>
+                {% endif %}
+                <!-- 127.0.0.1/bookmark/?page=숫자 -->
+                {% for page in page_obj.paginator.page_range %}
+                <li class="page-item{% if page_obj.number == forloop.counter %} disabled{% endif %}">
+                    <a href="{{ request.path }}?page={{ forloop.counter }}" class="page-link">{{ forloop.counter }}</a>
+                </li>
+            {% endfor %}
+            {% if page_obj.has_next %}
+                <li class="page-item"><a href="{{ request.path }}?page={{ page_obj.next_page_number }}" class="page-link">NEXT</a></li>
+            {% else %}
+                <li class="page-item disabled"><a href="{{ request.path }}" class="page-link">NEXT</a></li>
+            {% endif %}
+            </ul>
+            {% endif %}
+        </div>
     {% endblock %}
